<resources>
    <string name="app_name">DungeonsAndCode</string>
    <string name="select_rep_num">Укажите количество повторений</string>
    <string name="ok">ОК</string>
    <string name="nesting_level">Уровень вложенности:</string>
    <string name="zero">0</string>
    <string name="trap_message">Вы попали в ловушку :(</string>
    <string name="monster_message">Вы пали от руки скелета :(</string>
    <string name="treasure_message">Победа! Вы нашли сокровище :)</string>
    <string name="wall_message">Вы расшиблись об стену :(</string>
    <string name="lava_message">Вы упали в лаву :(</string>
    <string name="recursion_message">Вы ушли в бесконечную рекурсию :(</string>
    <string name="trapleft">trapLeft</string>
    <string name="traptop">trapTop</string>
    <string name="trapright">trapRight</string>
    <string name="trapbottom">trapBottom</string>
    <string name="choose_trap_type">Укажите тип ловушки</string>
    <string name="syntax_error">Программа написана с ошибками!</string>
    <string name="cell_is_taken">Эта клетка уже занята!</string>
    <string name="constructor_wall">Стена</string>
    <string name="constructor_hero">Герой</string>
    <string name="constructor_treasure">Сокровище</string>
    <string name="constructor_monster">Скелет</string>
    <string name="constructor_trap_left">Левая ловушка</string>
    <string name="constructor_trap_top">Верхняя ловушка</string>
    <string name="constructor_trap_right">Правая ловушка</string>
    <string name="constructor_trap_bottom">Нижняя ловушка</string>
    <string name="remove_last_action">Remove Last Action</string>
    <string name="reset_constructor">Reset Constructor</string>
    <string name="save_level">Save Level</string>
    <string name="unique_hero">Может быть только один герой!</string>
    <string name="unique_treasure">Может быть только одно сокровище!</string>
    <string name="play">Играть</string>
    <string name="create_level">Создать уровень</string>
    <string name="hero_and_treasure_exists">На поле должны быть герой и сокровище!</string>
    <string name="start_background">start background</string>
    <string name="levels">Уровни</string>
    <string name="custom_levels">Пользовательские уровни</string>
</resources>
