<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trap_type_radio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radio_trap_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/trapleft" />

    <RadioButton
        android:id="@+id/radio_trap_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/traptop" />

    <RadioButton
        android:id="@+id/radio_trap_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trapright" />

    <RadioButton
        android:id="@+id/radio_trap_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trapbottom" />

</RadioGroup>

