<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scene_background"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="600dp"
        android:layout_height="300dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/start_background"
            android:contentDescription="@string/start_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="48sp" />

        <Button
            android:id="@+id/open_levels_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:text="@string/play"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/open_constructor_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/create_level"
            android:textColor="@color/colorAccent" />

    </androidx.cardview.widget.CardView>

</LinearLayout>